--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,8 @@ default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
-  username: anderson
-  password: abc123
+  username: postgres
+  password: ''
   timeout: 5000
 
 development:
@@ -15,7 +15,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: organizer_test
+  database: travis_ci_test
 
 production:
   <<: *default
