--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
   username: postgres
-  password: ''
+  password:
   timeout: 5000
 
 development:
@@ -15,7 +15,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: travis_ci_test
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
 
 production:
   <<: *default
