--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,24 @@
 default: &default
-  adapter: postgresql
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: localhost
-  username: postgres
-  password:
   timeout: 5000
 
 development:
   <<: *default
-  database: organizer_development
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  adapter: sqlite3
   database: db/test.sqlite3
   pool: 5
-  timeout: 5000
 
 production:
   <<: *default
   database: organizer_production
+  adapter: postgresql
+  host: localhost
+  username: postgres
+  password:
