--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: ruby
-script:
-        - bundle exec rake db:seed RAILS_ENV=test --trace
+env:
+  - DB=sqlite
+  
+script: 
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rake db:seed RAILS_ENV=test --trace
