--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
   - bundle exec rake db:seed RAILS_ENV=test --trace
+  - bundle exec rake cucumber
+
