--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: ruby
 env:
   - DB=sqlite
-  
-script: 
+
+addons:
+        chrome: stable
+script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
   - bundle exec rake db:seed RAILS_ENV=test --trace
