RSpec no travis + link no index
Adição do link de edição de tasks na pagina principal
Adição dos testes do RSpec no travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ script:
   - bundle exec rake db:test:prepare
   - bundle exec rake db:seed RAILS_ENV=test --trace
   - bundle exec rake cucumber
+  - rake spec
 
